@@ -45,9 +45,10 @@ function(cl, data, params, model, inits = NULL, n.chains = 3, ...)
         "load" else "none"
     dir <- if (inherits(cl, "SOCKcluster"))
         getwd() else NULL
-    ## do the work
-    ## load rjags so that modules are cleaned up properly
-    mcmc <- snowWrapper(cl, 1:n.chains, jagsparallel, cldata, lib="dclone",
+    ## do the work, dclone loaded only if not yet there
+    lib <- if ("dclone" %in% clusterEvalQ(cl, .packages())[[1]])
+        NULL else "dclone"
+    mcmc <- snowWrapper(cl, 1:n.chains, jagsparallel, cldata, lib=lib,
         balancing=balancing, size=1, 
         rng.type=getOption("dcoptions")$RNG, cleanup=TRUE, dir=dir, ...)
     ## binding the chains
