@@ -14,6 +14,8 @@ Version 1.3-5, August 23, 2011
       to allow parallel chains via jags.parfit).
       This function is not exported by namespace, thus
       not user visible and undocumented.
+    * dclone is loaded to workers by snowWrapper
+      only if .packages() does not contain it yet.
 
 Version 1.3-4, July 9, 2011
     * dc.fit: updating fixed (only updated after 2nd iteration).
